# image_bot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: run_bot.py
src/backend/: settings.py  urls.py
src/bot/: __init__.py  callback_funcs.py  internal_requests.py  logger.py
src/images/: models.py  urls.py  views.py
src/images/migrations/: 0001_initial.py
